Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95634

Property "forward" of Node is non-NOTIFYable

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.2
    • 6.2.0 Beta1
    • Quick: 3D
    • None
    • Windows
    • 1
    • 6d8204447258c5bf2dc2c9c4df7fd131a1b67310
    • Qt Quick 3D - 2021 Week 31/32

    Description

      Properties "forward", "right" and "up" of Node component are non-NOTIFYable and can't be used in QML.

      To reproduce:
      1) Load Simple skinning example (or any other Quick 3D example).
      2) Add this code to PerspectiveCamera:

                  property var test: up
                  onTestChanged:
                  {
                      console.log("onTestChanged " + test)
                  }
                  onForwardChanged:
                  {
                      console.log("onForwardChanged " + test)
                  }
      

      Errors:
      QQmlExpression: Expression qrc:/main.qml:77:13 depends on non-NOTIFYable properties:
      QQuick3DPerspectiveCamera_QML_1::up
      qrc:/main.qml:82:13: Cannot assign to non-existent property "onForwardChanged"

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kagro Kaj Grönholm
            alexey89 alexey89
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes