Make Node forward, up and right bindable

Add changed notify signals for these so they are more usable from QML.
Only do related calculations when there actually are connections.

Pick-to: 6.2
Task-number: QTBUG-95634
Change-Id: I37d3e749c79717e311cea027e39d01952588e585
Reviewed-by: Andy Nichols <andy.nichols@qt.io>